# PolyFEMBlenderPlugin

./: README.md  addon.py  download-wheels.py  export_physics_constraints.py  file_hashes.txt  index.html  index.json  pyproject.toml  server.py  zip-plugin.py
physics_export/: __init__.py  blender_manifest.toml  index.html  index.json  pyproject.toml  vendorize.toml
physics_export/_vendor/meshio/: _common.py
physics_export/_vendor/meshio-5.3.5.dist-info/: RECORD
physics_export/_vendor/numpy/: __init__.py  conftest.py  ctypeslib.py
physics_export/_vendor/rich/: __init__.py  __main__.py  _extension.py  _log_render.py  _win32_console.py  _windows.py  _windows_renderer.py  abc.py  align.py  box.py  console.py  control.py  default_styles.py  diagnose.py  emoji.py  json.py  jupyter.py  layout.py  logging.py  markdown.py  markup.py  padding.py  palette.py  pretty.py  (+13 more)
physics_export/export/: physics_exporter.py
physics_export/operators/: convert_normal_to_displacement.py  create_polyfem_json.py  heightmap.py  heightmap_operator.py  run_polyfem.py
physics_export/panels/: heightmap.py  heightmap_panel.py  physics.py  physics_panel.py  poly_fem.py  polyfem_json.py
physics_export/properties/: export.py  export_properties.py  heightmap.py  heightmap_properties.py  polyfem.py  polyfem_json.py
physics_export/utils/: utils.py
polyfem/: __init__.py  blender_manifest.toml  pyproject.toml  requirements.txt
polyfem/operators/: create_polyfem_json.py  heightmap.py  run_polyfem.py
polyfem/panels/: polyfem_json.py
polyfem/properties/: physics_export_addon.py  polyfem.py
(+242 files in other folders)
