[tool.poetry]
name = "physics_export"
version = "1.0.9"
description = "This is the experimental Blender exporter for ETS Lab"
authors = ["This plugin has been tested for Blender 4.2."]
license = "GNU"
readme = "README.md"
packages = [{include = "physics_export"}]

[tool.poetry.dependencies]
python = "^3.11"
tetgen = "^0.6.5"
meshio = "^5.3.5"
trimesh = "^4.4.9"
rich = "^13.9.1"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vendorize]
target = "_vendor"
packages = [
    "meshio==5.3.5",
    "numpy==2.1.2",
    "scipy==1.14.1",
    "trimesh==4.5.0",
    "tetgen==0.6.5",
    "rich==13.9.2"
]